// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders correctly with project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="lg-ui-0001 emotion-0"
    href="https://www.mongodb.com/docs/"
    target="_self"
  >
    <span>
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

<span
    class="emotion-0 emotion-1"
  >
     / 
  </span>
  .emotion-0 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-0:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-0:active:before,
.emotion-0:hover:before,
.emotion-0:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:active,
.emotion-0:hover {
  color: #3D4F58;
}

.emotion-0:active:before,
.emotion-0:hover:before {
  background-color: #E7EEEC;
}

.emotion-0:focus {
  color: #1A567E;
}

.emotion-0:focus:before {
  background-color: #C5E4F2;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<button
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="Show all breadcrumbs"
    class="emotion-0"
    tabindex="0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-label="Ellipsis Icon"
        class=""
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.75 6a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm5 0a1.75 1.75 0 1 1 0 3.5 1.75 1.75 0 0 1 0-3.5Zm6.75 1.75a1.75 1.75 0 1 0-3.5 0 1.75 1.75 0 0 0 3.5 0Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
  .emotion-0 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

<span
    class="emotion-0 emotion-1"
  >
     / 
  </span>
  .emotion-0 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="lg-ui-0001 emotion-0"
    href="https://www.mongodb.com/docs/"
    target="_self"
  >
    <span>
      Crumb 4
    </span>
  </a>
  .emotion-0 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

<span
    class="emotion-0 emotion-1"
  >
     / 
  </span>
  .emotion-0 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  position: relative;
  font-size: 13px;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  display: none;
}

<a
    aria-describedby="tooltip-undefined"
    class="lg-ui-0001 emotion-0"
    href="https://www.mongodb.com/docs/view-analyze"
    target="_self"
  >
    <span>
      View & Analyze: An O…
      <span
        class="emotion-1"
      />
    </span>
  </a>
  .emotion-0 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

<span
    class="emotion-0 emotion-1"
  >
     / 
  </span>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  font-size: 13px;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="emotion-0 emotion-1"
    href="/documents/view/"
  >
    MongoDB Compass
  </a>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly without project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="lg-ui-0001 emotion-0"
    href="https://www.mongodb.com/docs/"
    target="_self"
  >
    <span>
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
  padding-left: 4px;
  padding-right: 4px;
}

<span
    class="emotion-0 emotion-1"
  >
     / 
  </span>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  font-size: 13px;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="emotion-0 emotion-1"
    href="/view-analyze/"
  >
    View & Analyze Data
  </a>
</DocumentFragment>
`;
